Se agregan fuentes Cera y jquery

--- a/index.html
+++ b/index.html
@@ -2,43 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Guía de Estilo WOM</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <div class="wm-container">
-    <nav class="wm-navigation"> 
+    <nav class="wm-nav"> 
       <h4>Estilos</h4>
       <ul>
-        <li>Tipografía</li>
-        <li>Headlines</li>
-        <li>Colores</li>
+        <li><a href="#tipografia" class="btn-tipografia">Tipografía</a></li>
+        <li><a href="#headlines" class="btn-headlines">Headlines</a></li>
+        <li><a href="#colores">Colores</a></li>
       </ul>
 
     <h4>Componentes</h4>
     <ul>
-      <li>Navbar</li>
-      <li>Botones</li>
-      <li>Header</li>
-      <li>Header Campaña</li>
-      <li>Credenciales</li>
-      <li>Informativo</li>
+      <li><a href="#navbar" class="url">Navbar</a></li>
+      <li><a href="#botones">Botones</a></li>
+      <li><a href="#header">Header</a></li>
+      <li><a href="#header-camp">Header Campaña</a></li>
+      <li><a href="#credenciales">Credenciales</a></li>
+      <li><a href="#informativo">Informativo</a></li>
     </ul>
 
   </nav>
 
   <main class="wm-content">  
-    <h3>Tipografía</h3>
+    <h3 id="tipografia">Tipografía</h3>
+    <p>Un buen headline significa que más usuarios lo leeran, se asegura que el esfuerzo y dedicación puestos en un artículo no se desperdicie, y también puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
+    <p><img src="sass/assets/img/fonts.png" alt=""></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
+    <h3 id="headlines">Headlines</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-
+    <h3 id="colores">Colores</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-
+    <h3 id="navbar"></h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
 
@@ -56,6 +58,7 @@
   </main>
     
   </div>
-  
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
