Correccion menu interactivo y edicion de contenido

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
   <div class="wm-container">
     <nav class="wm-nav"> 
+      <div class="logo"><img src="sass/assets/img/logowom.svg" alt=""></div>
       <ul>
-        <h4>Estilos</h4>
+        <h5>Estilos</h5>
         <li><a href="#tipografia">Tipografía</a></li>
         <li><a href="#headlines">Headlines</a></li>
         <li><a href="#colores">Colores</a></li>
-        <h4>Componentes</h4>
+        <h5>Componentes</h5>
         <li><a href="#navbar">Navbar</a></li>
         <li><a href="#botones">Botones</a></li>
         <li><a href="#header">Header</a></li>
@@ -28,28 +29,35 @@
     <main class="wm-content">  
       <section class="wm-text">
         <h3 id="tipografia">Tipografía</h3>
-        <p>Un buen headline significa que más usuarios lo leeran, se asegura que el esfuerzo y dedicación puestos en un artículo no se desperdicie, y también puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
+        <p>Un buen Headline significa que más usuarios lo leeran y veran, se asegura de que el esfuerzo que dedique a escribir un artículo no se desperdicie, y tambien puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
         <p><img src="sass/assets/img/fonts.png" alt="" class="img-center img-responsive"></p>
+        
+        <h4 id="headlines">Headlines</h4>
+        <p>Un buen Headline significa que más usuarios lo leeran y veran, se asegura de que el esfuerzo que dedique a escribir un artículo no se desperdicie, y tambien puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
+        <p><img src="sass/assets/img/fuentes.jpg" alt="" class="img-responsive"></p>
+      
+        <h3 id="colores">Colores</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-      <h3 id="headlines">Headlines</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+        <p><img src="sass/assets/img/colors1.png" alt="" class="img-responsive"></p>
+
+        <h3 id="navbar">Navbar</h3>
+        <p>La barra de navegación es un componenten transversal en el sitio, cualquier modificación se verá reflejada en cada página. En esta barra de navegación están expuestas las p{aginas más importantes y relevantes de la empresa, además accesos a la sucursal física la sucursal virtual.</p>
+      <h5>NAVBAR CONSUME DESKTOP</h5>
+      <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive"></p>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+      <h5>NAVBAR CONSUME MOBILE</h5>
+      <p><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"><img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive"></p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-      <h3 id="colores">Colores</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-      <h3 id="navbar">Navbar</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-    <h3 id="botones">Botones</h3>
+    <h4 id="botones">Botones</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-    <h3 id="header">Header</h3>
+    <h4 id="header">Header</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-
+    <h3 id="header-camp">Header Campaña</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
     </section>
