Modificaciones parametros flex

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="wm-nav-content">
         <div class="logo"><img src="sass/assets/img/logowom.svg" alt="" class="img-center"></div>
         <div class="toggle-menu">
-          menu
+          <span><i class="fas fa-bars"></i></span>
         </div>
-      <ul>
+      <ul class="">
         <h5>Estilos</h5>
         <li><a href="#tipografia">Tipografía</a></li>
         <li><a href="#headlines">Headlines</a></li>
@@ -26,7 +26,6 @@
         <li><a href="#header">Header</a></li>
         <li><a href="#header-camp">Header Campaña</a></li>
         <li><a href="#credenciales">Credenciales</a></li>
-        <li><a href="#informativo">Informativo</a></li>
       </ul>
       </div>
       
@@ -49,7 +48,7 @@
         <article id="colores">
           <h3>Colores</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-          <p><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></p>
+          <p class="img-center"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></p>
         </article>
 
         <article id="navbar">
@@ -58,15 +57,23 @@
            <h5>NAVBAR CONSUME DESKTOP</h5>
           <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive img-center"></p>
           <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive img-center"> 
-            <img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive img-center"></p>
+
           <h5>NAVBAR CONSUME MOBILE</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+          <p class="text-center"><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"><img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive"></p>
         </article>
         <article id="botones">
           <h3>Botones</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+          <p class="text-center">
+            <img src="sass/assets/img/botones-d1.jpg" alt="" class="img-responsive">
+            <img src="sass/assets/img/botones-d2.jpg" alt="" class="img-responsive">
+          </p>
+          <p class="text-center">
+            <img src="sass/assets/img/botones-l1.jpg" alt="" class="img-responsive">
+            <img src="sass/assets/img/botones-l2.jpg" alt="" class="img-responsive">
+          </p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p> 
         </article>
         <article id="header"> 
@@ -86,17 +93,13 @@
         <article id="credenciales"> 
           <h3>Credenciales</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-center"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-center"></p>
-        </article>
-
-        <article id="informativo">
-          <h3>Informativo</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis asperiores aut iste odit quod cum amet, placeat eligendi unde laborum autem tempore delectus numquam, dolore eum. Quia commodi est eum?. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus fugit ullam nostrum non fuga soluta minima explicabo. Voluptate molestias, necessitatibus consectetur quam dolorum ut nobis, aut consequatur, vero quas magni.</p>
+          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-center"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-center"> <img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-center"></p>
         </article>
 
       </section>
     </main>
   </div>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/app.js"></script>
 </body>
