Modificaciones version mobile

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   <div class="wm-container">
     <nav class="wm-nav"> 
       <div class="wm-nav-content">
-        <div class="logo"><img src="sass/assets/img/logowom.svg" alt="" class="img-center"></div>
+        <div class="logo"><img src="sass/assets/img/logowom.svg" alt="" class="img-flex"></div>
         <div class="toggle-menu">
           <span><i class="fas fa-bars"></i></span>
         </div>
-      <ul class="">
-        <h5>Estilos</h5>
-        <li><a href="#tipografia">Tipografía</a></li>
-        <li><a href="#headlines">Headlines</a></li>
-        <li><a href="#colores">Colores</a></li>
-        <h5>Componentes</h5>
-        <li><a href="#navbar">Navbar</a></li>
-        <li><a href="#botones">Botones</a></li>
-        <li><a href="#header">Header</a></li>
-        <li><a href="#header-camp">Header Campaña</a></li>
-        <li><a href="#credenciales">Credenciales</a></li>
+      <ul>
+        <li><h5>Estilos</h5><li>
+        <li class="list"><a href="#tipografia">Tipografía</a></li>
+        <li class="list"><a href="#headlines">Headlines</a></li>
+        <li class="list"><a href="#colores">Colores</a></li>
+        <li><h5>Componentes</h5><li>
+        <li class="list"><a href="#navbar">Navbar</a></li>
+        <li class="list"><a href="#botones">Botones</a></li>
+        <li class="list"><a href="#header">Header</a></li>
+        <li class="list"><a href="#header-camp">Header Campaña</a></li>
+        <li class="list"><a href="#credenciales">Credenciales</a></li>
       </ul>
       </div>
       
@@ -36,7 +36,7 @@
         <article id="tipografia">
         <h3>Tipografía</h3>
         <p>Un buen Headline significa que más usuarios lo leeran y veran, se asegura de que el esfuerzo que dedique a escribir un artículo no se desperdicie, y tambien puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
-        <p><img src="sass/assets/img/fonts.png" alt="" class="img-center img-responsive"></p>
+        <p><img src="sass/assets/img/fonts.png" alt="" class="img-flex img-responsive"></p>
         </article>
 
         <article id="headlines">
@@ -48,14 +48,14 @@
         <article id="colores">
           <h3>Colores</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-          <p class="img-center"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></p>
+          <p class="img-flex"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></p>
         </article>
 
         <article id="navbar">
           <h3>Navbar</h3>
           <p>La barra de navegación es un componenten transversal en el sitio, cualquier modificación se verá reflejada en cada página. En esta barra de navegación están expuestas las páginas más importantes y relevantes de la empresa, además accesos a la sucursal física la sucursal virtual.</p>
            <h5>NAVBAR CONSUME DESKTOP</h5>
-          <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive img-center"></p>
+          <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive img-flex"></p>
           <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
 
           <h5>NAVBAR CONSUME MOBILE</h5>
@@ -86,14 +86,14 @@
         <article id="header-camp"> 
           <h3>Header Campaña</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <img src="sass/assets/img/header-camp-desktop.jpg" alt="" class="img-responsive img-center">
+          <img src="sass/assets/img/header-camp-desktop.jpg" alt="" class="img-responsive img-flex">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
         </article>
 
         <article id="credenciales"> 
           <h3>Credenciales</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-center"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-center"> <img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-center"></p>
+          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-flex"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-flex"> <img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-flex"></p>
         </article>
 
       </section>
