Correccion de detalles de estilo

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <span><i class="fas fa-bars"></i></span>
         </div>
       <ul>
-        <li><h5>Estilos</h5><li>
+        <li class="list-title"><h5>Estilos</h5><li>
         <li class="list"><a href="#tipografia">Tipografía</a></li>
         <li class="list"><a href="#headlines">Headlines</a></li>
         <li class="list"><a href="#colores">Colores</a></li>
-        <li><h5>Componentes</h5><li>
+        <li class="list-title"><h5>Componentes</h5><li>
         <li class="list"><a href="#navbar">Navbar</a></li>
         <li class="list"><a href="#botones">Botones</a></li>
         <li class="list"><a href="#header">Header</a></li>
@@ -36,19 +36,19 @@
         <article id="tipografia">
         <h3>Tipografía</h3>
         <p>Un buen Headline significa que más usuarios lo leeran y veran, se asegura de que el esfuerzo que dedique a escribir un artículo no se desperdicie, y tambien puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
-        <p><img src="sass/assets/img/fonts.png" alt="" class="img-flex img-responsive"></p>
+        <div><img src="sass/assets/img/fonts.png" alt="" class="img-flex img-responsive"></div>
         </article>
 
         <article id="headlines">
           <h3>Headlines</h3>
           <p>Un buen Headline significa que más usuarios lo leeran y veran, se asegura de que el esfuerzo que dedique a escribir un artículo no se desperdicie, y tambien puede ayudar a su contenido a ser recogido por los motores de búsqueda.</p>
-          <p><img src="sass/assets/img/fuentes.jpg" alt="" class="img-responsive"></p>
+          <div><img src="sass/assets/img/fuentes.jpg" alt="" class="img-responsive"></div>
         </article>
 
         <article id="colores">
           <h3>Colores</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-          <p class="img-flex"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></p>
+          <div class="img-flex"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></div>
         </article>
 
         <article id="navbar">
@@ -56,24 +56,24 @@
           <p>La barra de navegación es un componenten transversal en el sitio, cualquier modificación se verá reflejada en cada página. En esta barra de navegación están expuestas las páginas más importantes y relevantes de la empresa, además accesos a la sucursal física la sucursal virtual.</p>
            <h5>NAVBAR CONSUME DESKTOP</h5>
           <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive img-flex"></p>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
 
           <h5>NAVBAR CONSUME MOBILE</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p class="text-center"><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"><img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive"></p>
+          <div class="img-flex"><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"><img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive"></div>
         </article>
         <article id="botones">
           <h3>Botones</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p class="text-center">
+          <div class="img-flex">
             <img src="sass/assets/img/botones-d1.jpg" alt="" class="img-responsive">
             <img src="sass/assets/img/botones-d2.jpg" alt="" class="img-responsive">
-          </p>
-          <p class="text-center">
+          </div>
+          <div class="img-flex">
             <img src="sass/assets/img/botones-l1.jpg" alt="" class="img-responsive">
             <img src="sass/assets/img/botones-l2.jpg" alt="" class="img-responsive">
-          </p>
+          </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p> 
         </article>
         <article id="header"> 
