cambios de espaciado y revisando espaciado

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Guía de Estilo WOM</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="sass/assets/img/favicon_wom.png">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
