--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
         <div><img src="sass/assets/img/fonts.png" alt="" class="img-flex img-responsive"></div>
         <div class="code-section">
           <pre><code class="language-css">
-p { font-family: 'Cera';
-font-weight: '500';
+p { 
+    font-family: 'Cera';
+    font-weight: '500';
 }
           </code></pre>
-          <button class="btn-show-moreless">Ver Más</button>
+          <a class="btn-show-moreless">Ver Más</a>
         </div>
         
 
@@ -73,10 +74,112 @@ font-weight: '500';
           <p><img src="sass/assets/img/navbar.jpg" alt="" class="img-responsive img-flex"></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
 
+          <div class="code-section">
+          <pre><code class="language-markup">
+            <script type="text/plain" class="language-markup">
+<header class="header">
+  <section class="topbar_wrapper"> 
+    <section class="topbar wrapper"> 
+      <figure class="logo">
+        <a href="/"> 
+          <img src="{url_image}" class="logo-img">
+        </a>  
+      </figure> 
+      <nav class="left"> 
+        <a onclick="location='http://www.wom.cl'" class="left-link active">Personas</a> 
+        <a onclick="location='http://www.wom.cl/sucursales'" class="left-link" href="http://www.wom.cl/empresas">Empresas</a> 
+      </nav> 
+      <nav class="right"> 
+        <a onclick="location='http://www.wom.cl/sucursales'" class="right-link right-link--sucursales">
+          <span class="icono icon-pin"></span>Sucursales
+        </a> 
+        <a href="https://www.wom.cl/pagofacil" target="_blank" class="right-link right-link--contactanos">
+          <span class="icono icon-pagofacil"></span>PAGA TU CUENTA
+        </a> 
+        <a href="#" class="right-link right-link--contactanos btn-accion-contactanos">
+          <span class="icono icon-footer-call"></span>CONTÁCTANOS
+        </a> 
+        <a onclick="location='http://www.wom.cl/sucursal-online/'" class="right-link right-link--miwom">
+          <span class="icono icon-mi-wom"></span>Sucursal Miwom
+        </a> 
+        <div class="bloque_contactanos"> 
+          <div class="bloque_contactanos-siquieres"> 
+            <h2 class="bloque_contactanos-title">SI QUIERES PORTATE A WOM</h2> 
+            <div class="bloque_contactanos-info"> 
+              <div class="item"> 
+                <span class="icon icon-footer-wtsp"></span> 
+                  <h3> <span>Escríbenos por <strong>Whatsapp:</strong></span> <span class="num"><a href="https://api.whatsapp.com/send?phone=56933136000" target="_blank" style="color: #2B0A37;">+56 9 33 13 6000</a></span> </h3> 
+              </div> 
+              <div class="item"> 
+                <span class="icon icon-footer-call"></span> 
+                <h3> <span>Llámanos al</span> <span class="num">600 200 1000</span> </h3> 
+              </div> 
+            </div> 
+          </div> 
+          <div class="bloque_contactanos-sieres"> 
+            <h2 class="bloque_contactanos-title">SI ERES WOMER</h2> 
+            <div class="bloque_contactanos-info"> 
+              <div class="item"> <span class="icon icon-footer-call"></span> <h3> <span>Llámanos al:</span> <span class="num">2 2 337 76 00</span> </h3> </div> <div class="item"> <span class="icon icon-smartphone"></span> <h3> <span>Llámanos al:</span> <span class="num">2 2 337 76 00</span> </h3> </div> 
+            </div> 
+          </div> 
+        </div> 
+      </nav> 
+    </section>
+    <!-- topbar --> 
+  </section> 
+  <section class="menu_wrapper" id="main_menu"> 
+    <nav class="menu wrapper"> 
+      <a href="https://www.wom.cl" class="menu-link pressed" data-union="Inicio">Inicio</a> 
+      <a href="https://www.wom.cl/planes" class="menu-link" data-union="Planes">Planes</a> 
+      <a href="https://www.wom.cl/prepago" class="menu-link" data-union="Prepago">Prepago</a> 
+      <a href="https://www.wom.cl/internet" class="menu-link" data-union="Internet">Internet</a> 
+      <a href="http://www.wom.cl/equipos" class="menu-link" data-union="Equipos">Equipos</a> 
+    </nav> 
+  </section> 
+</header>
+</script>
+          </code></pre>
+          <a class="btn-show-moreless">Ver Más</a>
+          </div>
+
           <h5>NAVBAR CONSUME MOBILE</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <div class="img-flex"><img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"><img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive"></div>
+          <div class="img-flex">
+          <img src="sass/assets/img/navbar-mobile1.jpg" alt="" class="img-responsive"> 
+          <img src="sass/assets/img/navbar-mobile2.jpg" alt="" class="img-responsive">
+          </div>
+          <div class="code-section">
+          <pre><code class="language-markup">
+            <script type="text/plain" class="language-markup">
+              <section class="header_mobile" id="header_mobile"> 
+                <div class="mobile_bar"> 
+                  <figure class="logo"> 
+                    <a href="/"> <img src="/documents/20182/57328/logo-wom-2.png/7a009b8c-ddd3-0d92-cac6-d2006805c2a6?t=1515679713301" class="logo-img"></a>  
+                  </figure> 
+                  <span class="mobile_bar-btn_menu icon-menu-mobile" id="btn_menu" data-active="close"></span> 
+                </div> 
+<section class="menu_mobile" id="menu_mobile"> 
+  <section class="tab"> 
+    <a onclick="location='http://www.wom.cl'" class="tab-btn tab-btn--active">Personas</a> 
+    <a onclick="location='http://www.wom.cl/sucursales'" class="tab-btn">Empresa</a> 
+  </section> 
+    <nav class="menu"> 
+      <a href="https://www.wom.cl" class="menu-link" data-union="Inicio">Inicio</a> 
+      <a href="https://www.wom.cl/planes" class="menu-link" data-union="Planes">Planes</a> 
+      <a href="https://www.wom.cl/prepago" class="menu-link" data-union="Prepago">Prepago</a> 
+      <a href="https://www.wom.cl/internet" class="menu-link" data-union="Internet">Internet</a> 
+      <a href="http://www.wom.cl/equipos" class="menu-link" data-union="Equipos">Equipos</a> 
+      <a href="https://sucursalmiwom.wom.cl" class="menu-sucursal">Sucursal MiWOM</a> 
+    </nav> 
+  </section> 
+</section>
+
+
+            </script>
+              </code></pre>
+              <a class="btn-show-moreless">Ver Más</a>
+          </div>
         </article>
         <article id="botones">
           <h3>Botones</h3>
@@ -107,8 +210,51 @@ font-weight: '500';
 
         <article id="credenciales"> 
           <h3>Credenciales</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
-          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-flex"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-flex"> <img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-flex"></p>
+          <p>Lorem ipsum dolor sit amet, consectetur  adipisicing elit. Ea est ex minima debitis deleniti nam quasi placeat eveniet, voluptate impedit assumenda blanditiis velit qui, aspernatur dolores. Est dignissimos adipisci maxime.</p>
+          <p><img src="sass/assets/img/credenciales1.jpg" alt="" class="img-responsive img-flex"> <img src="sass/assets/img/credenciales2.jpg" alt="" class="img-responsive img-flex"></p>
+          <div class="code-section">
+          <pre><code class="language-markup">
+            <script type="text/plain" class="language-markup">
+<section class="section-center inner-pad-v"> 
+  <section class="wrapper texto_centrado"> 
+    <h1 class="texto_centrado-titulo">Lorem ipsum dolor</h1> 
+    <p class="texto_centrado-bajada">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+    <section class="opciones_wom"> 
+      <article class="opciones_wom-col"> 
+        <img src="{url-image}" "="" alt="Icono" class="img-icon"> 
+        <p class="opciones_wom-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Ipsa commodi, laudantium consequuntur nobis eius saepe quae, similique quod id minima totam deserunt nam dolorum itaque.</p> 
+      </article> 
+      <article class="opciones_wom-col"> 
+        <img src="{url-image}" "="" alt="Icono" class="img-icon"> 
+        <p class="opciones_wom-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, non, sequi quis praesentium necessitatibus molestias. Soluta ipsam quos, sequi iure. Harum, accusantium nostrum magnam culpa maiores optio cumque odit perferendis.</p> 
+      </article> 
+      <article class="opciones_wom-col"> 
+        <img src="{url-image}" alt="Icono" class="img-icon"> 
+        <p class="opciones_wom-detail">Te damos whatsapp ilimitado. <br>Una de las redes sociales que más usas.</p> 
+      </article> 
+      <article class="opciones_wom-col"> 
+        <img src="{url-image}" alt="Icono" class="img-icon"> <p class="opciones_wom-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Fuga earum doloremque dolor, sunt delectus commodi consequuntur.</p> 
+      </article> 
+    </section> 
+  </section> 
+</section>
+            </script>
+          </code></pre>
+          <a class="btn-show-moreless">Ver Más</a>
+          </div>
+
+          <p><img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-flex"></p>
+
+          <div class="code-section">
+          <pre><code class="language-markup">
+          <script type="text/plain" class="language-markup">
+<section class="section-center inner-pad-v">
+
+</section>
+</script>
+          </code></pre>
+          <a class="btn-show-moreless">Ver Más</a>
+          </div>
         </article>
 
       </section>
